# Cpp-call-Python-Demo

./: README.md
CallFunc/: CMakeLists.txt  main.cpp  readme.md
CallFunc/source/: CMakeCache.txt  Makefile  cmake_install.cmake  myCpp
pythonLib/include/python3.12/: EXTERNALLY-MANAGED  _sysconfigdata__darwin_darwin.py  sitecustomize.py  sysconfig.py
pythonLib/include/python3.12/config-3.12-darwin/: Makefile  Setup.stdlib  python-config.py
pythonLib/include/python3.12/ensurepip/_bundled/: pip-24.0-py3-none-any.whl
pythonLib/lib/pkgconfig/: python-3.12-embed.pc  python-3.12.pc
